--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Rahul",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
