--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.1",
+    "postman-request": "^2.88.1-postman.31",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
